--- a/ProfSite/Views/Bravecto/index.cshtml
+++ b/ProfSite/Views/Bravecto/index.cshtml
@@ -41,8 +41,8 @@
         <div class="header clearfix">
             <nav>
                 <ul id="top-nav" class="nav nav-pills">
-                    <li role="presentation"><a href="/bravecto/about-us">ABOUT US</a></li>
-                    <li role="presentation"><a href="/bravecto/contact-us">CONTACT US</a></li>
+                    <li role="presentation"><a href="/about-us">ABOUT US</a></li>
+                    <li role="presentation"><a href="/contact-us">CONTACT US</a></li>
                 </ul>
             </nav>
             <a href="/bravecto" class="navbar-brand bravovets">
@@ -141,7 +141,7 @@
                     </h2>
                     <p>Get access to exclusive tools and resources to help you connect with and educate your customers.</p>
                     <p>
-                        <a class="btn btn-default" href="/bravecto/support" role="button">
+                        <a class="btn btn-default" href="/support" role="button">
                             READ MORE
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
@@ -154,7 +154,7 @@
                     </h2>
                     <p>Learn about the breakthrough treatment that extends flea and tick protection up to 12 weeks.</p>
                     <p>
-                        <a class="btn btn-default" href="/bravecto/innovation" role="button">
+                        <a class="btn btn-default" href="/innovation" role="button">
                             READ MORE
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
@@ -167,7 +167,7 @@
                     </h2>
                     <p>Close adherence gaps with extended protection, so there are fewer chances for pet owners to forget.</p>
                     <p>
-                        <a class="btn btn-default" href="/bravecto/adherence" role="button">
+                        <a class="btn btn-default" href="/adherence" role="button">
                             READ MORE
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
@@ -217,7 +217,7 @@
             <h2 class="blue">IMPROVE COMMUNICATION WITH CUSTOMERS AND ENHANCE YOUR PRACTICE.</h2>
             <p>
                 Stay up to date with clinical research, expand your social media visibility, and create new and stronger customer
-                relationships when you partner with us. <a href="/bravecto/contact-us">
+                relationships when you partner with us. <a href="/contact-us">
                     <span class="orange">Contact your sales representative</span>
                 </a> today to learn
                 how you can grow your relationship with new and existing customers or log in now.
@@ -241,7 +241,7 @@
             <h2 class="purple">TAKE EFFICACY FURTHER THAN EVER BEFORE WITH THE LATEST INNOVATION IN TREATMENT</h2>
             <p>
                 Now it's possible to effectively protect against fleas and ticks for a full 12 weeks with a single chew.
-                That's about 3X longer than any other chew ever developed. <a href="/bravecto/contact-us"><span class="orange">Contact your sales representative</span></a> today to learn
+                That's about 3X longer than any other chew ever developed. <a href="/contact-us"><span class="orange">Contact your sales representative</span></a> today to learn
                 more about this innovative alternative to monthly OTC treatments or log in now.
             </p>
             <p>
@@ -264,7 +264,7 @@
             <h2 class="red">PREVENT GAPS IN COMPLIANCE WITH FEWER TREATMENTS TO FORGET</h2>
             <p>
                 The average dog is treated for fleas and ticks only 2.8 months out of the year. Help improve compliance by giving
-                pet owners fewer chances to forget with a treatment that lasts 12 full weeks. <a href="/bravecto/contact-us">
+                pet owners fewer chances to forget with a treatment that lasts 12 full weeks. <a href="/contact-us">
                     <span class="orange">Contact your sales representative</span>
                 </a> today to learn
                 today to learn more about preventing gaps in protection for every dog you treat or log in now.
@@ -290,10 +290,10 @@
                     <a href="http://www.bravovets.com/termsandconditions">TERMS + CONDITIONS</a>
                 </li>
                 <li>
-                    <a href="/bravecto/sitemap">SITE MAP</a>
+                    <a href="/sitemap">SITE MAP</a>
                 </li>
                 <li>
-                    <a href="/bravecto/contact-us">CONTACT US</a>
+                    <a href="/contact-us">CONTACT US</a>
                 </li>
             </ul>
         </div>
