--- a/ProfSite/Views/BravoVets/facebookfeed.cshtml
+++ b/ProfSite/Views/BravoVets/facebookfeed.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewBag.Title = "Facebook";
     ViewBag.SelectedNode = "facebook";
-    Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
+    Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
+    ViewBag.DisplaySubnavigation = true;
 }
 
 <div class="container">
