--- a/ProfSite/Views/BravoVets/resources.cshtml
+++ b/ProfSite/Views/BravoVets/resources.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewBag.Title = "Resources";
     ViewBag.SelectedNode = "resources";
-    Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
+    Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
+    ViewBag.DisplaySubnavigation = true;
 }
-
 
 <div class="container">
     <div class="row simpleheaderrow">
