--- a/ProfSite/Views/BravoVets/twitterfeed.cshtml
+++ b/ProfSite/Views/BravoVets/twitterfeed.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewBag.Title = "Twitter";
     ViewBag.SelectedNode = "twitter";
-    Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
+    Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
+    ViewBag.DisplaySubnavigation = true;
 }
 @section head {
     <style type="text/css">
