--- a/ProfSite/Views/BravoVets/Profile.cshtml
+++ b/ProfSite/Views/BravoVets/Profile.cshtml
@@ -1,7 +1,10 @@
 ﻿@model BravoVets.DomainObject.BravoVetsUser
 @using BravoVets.DomainObject
 @using bvResources = ProfSite.Resources.Resource
-
+@{
+    Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
+    ViewBag.DisplaySubnavigation = false;
+}
 @{
     // This one view will render conditionally, based on whether it is an initial view, or has been reached through the "edit profile" link
     bool isInitial;
@@ -90,22 +93,22 @@
 
         </script>
 
-        <div class="page-content-wrapper">
+        <div class="page-content-wrapper complete-profile">
             <div class="container">
-                <div class="row">
+                <div class="row simpleheaderrow">
                     <div class="col-xs-12">
                         <div class="user-profile">
-                            <h1 class="page-title user">@bvResources.CompleteProfile</h1>
+                            <h2 class="">@bvResources.CompleteProfile</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <div class="profile-form">
-                            <div class="white-trans-bg diagonal-bottom">
+                        <div class="complete-profile-wrapper">
+                            <div class="complete-profile-row">
                                 <div class="row">
-                                    <div class="col-xs-12">
-                                        <div class="step one">@bvResources.BravoVets_Profile_Step</div>
+                                    <div class="col-xs-12 complete-profile-header">
+                                        <div class="profile-step one">@bvResources.BravoVets_Profile_Step 1</div>
                                         <h2>@bvResources.EnterPracticeName</h2>
                                     </div>
                                 </div>
@@ -125,10 +128,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="white-trans-bg diagonal-bottom">
+                            <div class="complete-profile-row">
                                 <div class="row">
-                                    <div class="col-xs-12">
-                                        <div class="step two">@bvResources.BravoVets_Profile_Step</div>
+                                    <div class="col-xs-12 complete-profile-header">
+                                        <div class="profile-step two">@bvResources.BravoVets_Profile_Step 2</div>
                                         <h2>@bvResources.BravoVets_Profile_LinkSocialAcccounts</h2>
                                     </div>
                                 </div>
@@ -142,31 +145,53 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="white-trans-bg diagonal-bottom">
+                            <div class="complete-profile-row">
                                 <div class="row">
-                                    <div class="col-xs-12">
-                                        <div class="step three">@bvResources.BravoVets_Profile_Step</div>
+                                    <div class="col-xs-12 complete-profile-header">
+                                        <div class="profile-step three">@bvResources.BravoVets_Profile_Step 3</div>
+                                        <h2>@bvResources.SetPasswordText</h2>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p></p>
+                                    </div>
+
+                                    <div class="col-sm-6 plus-diagonal-vertical">
+                                        <div class="form-group">
+                                            @Html.Password("Password", "", new { @class = "form-control uppercase", placeholder = bvResources.PasswordText  })
+                                        </div>
+                                        <div class="form-group">
+                                            @Html.Password("ConfirmPassword", "", new { @class = "form-control", placeholder = bvResources.ConfirmPasswordText })
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="complete-profile-row">
+                                <div class="row">
+                                    <div class="col-xs-12 complete-profile-header">
+                                        <div class="profile-step three">@bvResources.BravoVets_Profile_Step 4</div>
                                         <h2>@bvResources.BravoVets_Profile_Start</h2>
                                     </div>
                                 </div>
-
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <p>@bvResources.BravoVets_Profile_ExploreResources</p>
                                     </div>
 
                                     <div class="col-sm-6 plus-diagonal-vertical">
-                                        <button class="btn btn-primary">@bvResources.SaveAndContinue</button>
+                                        <button class="btn btn-default">
+                                            @bvResources.SaveAndContinue
+                                            <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                                        </button>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     }
 
 }
@@ -246,8 +271,8 @@ else
                             </div>
                             <hr class="plus diagonal">
                             <div class="form-inline">
-                                <a href="javascript:void(0)" class="btn social-button facebook-bg linked" onclick=" toggleFacebook(@isFacebookLinked);return false; ">@facebookText</a>
-                                <a href="javascript:void(0)" class="btn social-button twitter-bg" onclick=" toggleTwitter(@isTwitterLinked);return false; ">@twitterText</a>
+                                <a href="javascript:void(0)" class="btn social-button facebook-bg linked" onclick="togglefacebook(@isFacebookLinked);return false;">@facebookText</a>
+                                <a href="javascript:void(0)" class="btn social-button twitter-bg" onclick="toggletwitter(@isTwitterLinked);return false;">@twitterText</a>
                             </div>
                             <hr class="plus diagonal">
                             <div class="pull-right">
@@ -258,15 +283,13 @@ else
                             <ul class="current-locations list-unstyled">
                                 @Html.EditorFor(model => model.Veterinarian.VeterinarianFacilities)
                             </ul>
-                            <hr id="EditSectionHr" class="plus diagonal">                           
+                            <hr id="EditSectionHr" class="plus diagonal">
                             @Html.EditorFor(model => model.Veterinarian.EditableFacility)
                             <div class="pull-right">
                                 <button class="btn btn-primary">@bvResources.SaveAndContinue</button>
                                 <div class="clearfix"></div>
                             </div>
                             <div class="clearfix"></div>
-
-
                         </div>
                     </div>
                 </div>
