--- a/ProfSite/Views/BravoVets/about-us.cshtml
+++ b/ProfSite/Views/BravoVets/about-us.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = ProfSite.Resources.Resource.AboutUsText;
-    Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
+    Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
+    ViewBag.DisplaySubnavigation = true;
 }
 
 <div class="container">
