--- a/ProfSite/Views/BravoVets/contact-us.cshtml
+++ b/ProfSite/Views/BravoVets/contact-us.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Contact Us";
-    ViewBag.SelectedNode = "contactus";
-    Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
+    Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
+    ViewBag.DisplaySubnavigation = true;
 }
 
 <div class="container">
