--- a/ProfSite/Views/BravoVets/products.cshtml
+++ b/ProfSite/Views/BravoVets/products.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Products";
-    Layout = "~/Views/Shared/_LayoutBravecto.cshtml";
+    Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
+    ViewBag.DisplaySubnavigation = true;
 }
 
 <div class="container">
